fixed paragraph spacing

--- a/style.css
+++ b/style.css
@@ -250,6 +250,7 @@ h4 {
 .box-1 {
   font-size: 22px;
   line-height: 1.6em;
+  margin-top: 30px;
 }
 
 .figure-3-caption {
